# concert-ticket

./: .gitignore  README.md  pyproject.toml
concertticket/config/: settings.py  urls.py
concertticket/ticket/: admin.py  forms.py  models.py
concertticket/ticket/management/commands/: populate_db.py
concertticket/ticket/migrations/: 0001_initial.py
